# ffp

./: .gitignore  .pylintrc  .travis.yml  CONTRIBUTORS  Cargo.toml  README.md  build_wheels.sh  setup.py
.github/workflows/: python.yml  pythonpublish.yml
docs/: conf.py  index.rst  install.rst  quickstart.rst
docs/modules/: api.rst  ffp.embeddings.rst  ffp.io.rst  ffp.metadata.rst  ffp.norms.rst  re-exports.rst
docs/modules/storage/: ffp.storage.interface.rst  ffp.storage.ndarray.rst  ffp.storage.quantized.rst  ffp.storage.rst
docs/modules/subwords/: ffp.subwords.explicit_indexer.ExplicitIndexer.rst  ffp.subwords.hash_indexers.FastTextIndexer.rst  ffp.subwords.hash_indexers.FinalfusionHashIndexer.rst  ffp.subwords.ngrams.rst  ffp.subwords.rst
docs/modules/vocab/: ffp.vocab.interfaces.rst  ffp.vocab.rst  ffp.vocab.simple_vocab.SimpleVocab.rst  ffp.vocab.subword.ExplicitVocab.rst  ffp.vocab.subword.FastTextVocab.rst  ffp.vocab.subword.FinalfusionBucketVocab.rst
ffp/: __init__.py  embeddings.py  io.py  metadata.py  norms.py  storage.py  subwords.py  vocab.py
ffp/storage/: __init__.py  io.py  ndarray.py  storage.py
ffp/subwords/: __init__.py  explicit_indexer.py  explicit_indexer.pyx  hash_indexers.c  hash_indexers.pyx  ngrams.c  ngrams.pyx
src/: lib.rs  util.rs
src/ffp/: __init__.py  embeddings.py  io.py  metadata.py  norms.py
src/ffp/storage/: __init__.py  io.py  ndarray.py  (+2 more)
tests/: conftest.py  test_corpus_vocab.py  test_embeddings.py  test_header.py  test_metadata.py  test_norms.py  test_storage.py  test_test.py  test_vocab.py
tests/data/: test.txt
(+9 files in other folders)
