[package]
name = "vocab_rs"
version = "0.1.0"
authors = ["Sebastian Puetz <sebastian.puetz@uni-tuebingen.de>"]
edition = "2018"

[lib]
name = "vocab_rs"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
finalfusion = "0.11"
indicatif = "0.13"
pyo3 = "0.8"
